NCMP: Update existing Batch endpoint (Moving url param into rest body)
- NCMP batch endpoint is updated to accept details into request payload.
- Removed unused code of previous impl.
- New groovy is in progress.
- Functional test is in progress

Issue-ID: CPS-1635
