# cps-ncmp-rest/docs/openapi/components.yaml
@@ -285,6 +285,43 @@ components:
       properties:
         state:
           $ref: '#/components/schemas/CmHandleCompositeState'
+    # Batch Request Schemas
+    ResourceDataBatchRequest:
+      type: object
+      title: get resource data for given array of operations
+      properties:
+        operations:
+          type: array
+          items:
+            type: object
+            $ref: '#/components/schemas/BatchOperationDefinition'
+          description: contains batch request details
+    BatchOperationDefinition:
+      required:
+        - operation
+        - datastore
+        - operationId
+      properties:
+        operation:
+          type: string
+          example: 'read'
+        operationId:
+          type: string
+          example: '12'
+        datastore:
+          type: string
+          example: 'ncmp-datastore:passthrough-operational'
+        options:
+          type: string
+          example: '(fields=schemas/schema)'
+        resourceIdentifier:
+          type: string
+          example: 'parent/child'
+        targetIds:
+          type: array
+          items:
+            type: string
+          example: [ "da310eecdb8d44c2acc0ddaae01174b1","c748c58f8e0b438f9fd1f28370b17d47" ]
 
   examples:
     dataSampleRequest:
