# cps-ncmp-service/src/main/java/org/onap/cps/ncmp/api/impl/operations/CmHandle.java
@@ -1,6 +1,6 @@
 /*
  *  ============LICENSE_START=======================================================
- *  Copyright (C) 2021-2022 Nordix Foundation
+ *  Copyright (C) 2023 Nordix Foundation
  *  ================================================================================
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -22,36 +22,21 @@ package org.onap.cps.ncmp.api.impl.operations;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import java.util.LinkedHashMap;
-import java.util.List;
 import java.util.Map;
 import lombok.Builder;
 import lombok.Getter;
-import org.onap.cps.ncmp.api.impl.yangmodels.YangModelCmHandle;
 
 @JsonInclude(JsonInclude.Include.NON_NULL)
 @Getter
 @Builder
-public class DmiRequestBody {
+public class CmHandle {
+    private String id;
 
-    private OperationType operation;
-    private String dataType;
-    private String data;
     @JsonProperty("cmHandleProperties")
     private Map<String, String> dmiProperties;
-    private String requestId;
 
-    /**
-     * Set DMI Properties by converting a list of YangModelCmHandle.Property objects.
-     *
-     * @param yangModelCmHandleProperties list of cm handle dmi properties
-     */
-    public void asDmiProperties(
-        final List<YangModelCmHandle.Property> yangModelCmHandleProperties) {
-        dmiProperties = new LinkedHashMap<>();
-        for (final YangModelCmHandle.Property dmiProperty : yangModelCmHandleProperties) {
-            dmiProperties.put(dmiProperty.getName(), dmiProperty.getValue());
-        }
+    public static CmHandle getCmHandleWithProperties(final String cmHandleId,
+                                                     final Map<String, String> cmHandleProperties) {
+        return CmHandle.builder().id(cmHandleId).dmiProperties(cmHandleProperties).build();
     }
-
 }
